# AF_Lib

./: .gitignore  AF_Lib.code-workspace  AF_Lib.sln  AF_Lib.vcxproj  AF_Lib.vcxproj.filters  CMakeLists.txt  README.md
include/: AF_AI_Action.h  AF_AppData.h  AF_Assets.h  AF_Audio.h  AF_AudioClip.h  AF_BuildData.h  AF_Collision.h  AF_CollisionVolume.h  AF_DX11_RenderData.h  AF_Debug.h  AF_File.h  AF_FileList.h  AF_FrameBufferData.h  AF_GL_Util.h  AF_Input.h  AF_InputAction.h  AF_JSON.h  AF_Key.h  AF_Lib_API.h  AF_Lib_Define.h  AF_LightingData.h  AF_Log.h  AF_Material.h  AF_Mesh.h  AF_MeshData.h  AF_MeshLoad.h  AF_Physics.h  AF_PlatformData.h  AF_Project.h  AF_ProjectData.h  AF_Random.h  AF_Ray.h  AF_Renderer.h  AF_Renderer_Util.h  AF_RenderingData.h  AF_Scene.h  AF_Script_Engine.h  AF_Shader.h  AF_Texture.h  AF_Time.h  (+5 more)
include/AF_Math/: AF_Mat4.h  AF_Math.h  AF_Math_Define.h  AF_Vec2.h  AF_Vec3.h  AF_Vec4.h
include/ECS/Components/: .AF_CCollider.h.swp  AC_CInputController.h  AF_C2DRigidbody.h  AF_C3DRigidbody.h  AF_CAI_Behaviour.h  AF_CAnimation.h  AF_CAudioSource.h  AF_CCamera.h  AF_CCollider.h  AF_CEditorData.h  AF_CInputController.h  AF_CLight.h  AF_CMesh.h  AF_CPlayerData.h  AF_CSKeletalAnimation.h  AF_CScript.h  AF_CSkeletalAnimation.h  AF_CSprite.h  AF_CText.h  AF_CTransform2D.h  AF_CTransform3D.h  AF_Component.h
include/ECS/Entities/: AF_Actor.h  AF_ECS.h  AF_Entity.h
include/ECS/Systems/: AF_SActions.h  AF_SMovement.h
src/DX11/: AF_DX11_Forward_Renderer.c  AF_DX11_Forward_Renderer.cpp  AF_DX11_Renderer_Util.c  AF_DX11_Shader.c
src/ECS/Components/: AF_C2DRigidbody.c  AF_C3DRigidbody.c  AF_CAI_Behaviour.c  AF_CAnimation.c  AF_CAudioSource.c  AF_CCamera.c  AF_CCollider.c  AF_CEditorData.c  AF_CInputController.c  AF_CLight.c  AF_CMesh.c  AF_CPlayerData.c  AF_CScript.c  AF_CSkeletalAnimation.c  AF_CSprite.c  AF_CText.c  AF_CTransform2D.c  AF_CTransform3D.c  AF_Component.c
src/ECS/Entities/: AF_ECS.c  AF_Entity.c
src/ECS/Systems/: AF_SActions.c
src/OpenGL/: AF_OpenGL_Debug.c  AF_OpenGL_Forward_Renderer.c  AF_OpenGL_Renderer.c  AF_OpenGL_Renderer_Util.c  AF_OpenGL_Shader.c  AF_Window_glfw.c
src/assimp/: AF_MeshLoad_Assimp.cpp
src/cJSON/: AF_JSON.c
src/common/: AF_Audio.c  AF_File.c  AF_MeshLoad.c  AF_Physics.c  AF_Project.c
src/osx/: AF_Window_Cocoa.m
src/windows/: AF_File_UWP.c  AF_Input_UWP.c  AF_Log_UWP.c  AF_MeshLoad.c
